--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="pimg2">
     <div class="ptext">
-      <span class="border">
+      <span class="border trans">
         Image 2 text
       </span>
     </div>
@@ -36,7 +36,7 @@
 
   <div class="pimg3">
     <div class="ptext">
-      <span class="border">
+      <span class="border trans">
         Image 3 text
       </span>
     </div>
